# book-keeping

./: package.json  pnpm-lock.yaml
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  bill.db  tauri.conf.json
src-tauri/src/: db_handler.rs  main.rs
src/types/: bill.d.ts
src/utils/: index.ts
