[package]
name = "book-keeping"
version = "1.0.0"
description = "基于 Tauri Rust Svelte 跨平台的桌面端记账工具"
authors = ["CherryBlossomHope"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
